<resources>
    <string name="app_name">SmallGames</string>
    <string name="maintext">Vừa học vừa chơi</string>
    <string name="card">card</string>
    <string name="egg">egg</string>
    <string name="chicken">chicken</string>
    <string name="slide">slide</string>
    <string name="fishing">fishing</string>
    <string name="title_activity_game1">Game1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tablemain">mainTable</string>
</resources>